# BreastCancer

./: README.md  app.py  pyproject.toml  requirements.txt
models/: cleaned.csv  cleaning.py  model.pkl  modelling.py
templates/: index.html  prediction.html
